--- a/index.css
+++ b/index.css
@@ -9,6 +9,25 @@ body {
 
 /* nav editting starts*/
 
+/* min */
+
+@media (min-width: 400px){
+
+}
+
+/* medium */
+
+@media (min-width: 780px){
+
+}
+
+/* large */
+
+@media (min-width: 970px){
+
+}
+
+
 nav {
   background-color: #333;
   height: 10%;
@@ -16,12 +35,42 @@ nav {
   color: white;
 }
 
-#nav_title {
-float:left;
-width: 15%;
-height:100%;
-vertical-align: middle;
-position: relative;
+/* min */
+
+@media (min-width: 400px){
+  #nav_title {
+  float:left;
+  width: 50%;
+  height:100%;
+  vertical-align: middle;
+  position: relative;
+  }
+}
+
+/* medium */
+
+@media (min-width: 780px){
+
+  #nav_title {
+  float:left;
+  width: 40%;
+  height:100%;
+  vertical-align: middle;
+  position: relative;
+  }
+
+}
+
+/* large */
+
+@media (min-width: 970px){
+  #nav_title {
+  float:left;
+  width: 20%;
+  height:100%;
+  vertical-align: middle;
+  position: relative;
+  }
 }
 
 nav a{
@@ -40,22 +89,49 @@ nav a{
   opacity:.6;
 }
 
-#menu {
-  float: right;
-  width:10%;
-  height:100%;
-  margin-right: 1%;
-  position: relative;
-  display: inline-block;
+/* min */
+
+@media (min-width: 400px){
+  #menu {
+    float: right;
+    width:20%;
+    height:100%;
+    margin-right: 1%;
+    position: relative;
+    display: inline-block;
+  }
+
+  #menu:hover{
+    background: red;
+    cursor: pointer;
+  }
 }
 
-#menu:hover{
-  background: red;
-  color: black;
-  cursor: pointer;
+/* large */
+
+@media (min-width: 800px){
+
+  #menu {
+    float: right;
+    width:10%;
+    height:100%;
+    margin-right: 1%;
+    position: relative;
+    display: inline-block;
+  }
+
+  #menu:hover{
+    background: red;
+    cursor: pointer;
+  }
+
 }
 
 /* nav editting ends*/
+
+/* test starts*/
+
+/* test ends*/
 
 /* header editting starts*/
 
@@ -68,6 +144,32 @@ header{
   height: 85%;
 }
 
+/* medium */
+
+@media (min-width: 0){
+  header{
+    background-image: url('https://s3-ap-southeast-2.amazonaws.com/koki25ando/andojump1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: contain;
+    background-position: top;
+    height: 100%;
+  }
+}
+
+/* large */
+
+@media (min-width: 770px){
+  header{
+    background-image: url('https://s3-ap-southeast-2.amazonaws.com/koki25ando/andojump1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: contain;
+    background-position: center;
+    height: 85%;
+  }
+}
+
 #name_introduction{
   text-align: center;
   font-family: sans-serif;
@@ -77,19 +179,79 @@ header{
   margin: 0;
 }
 
+.test {
+  height: 20%;
+  width: 1000px;
+  background: black;
+}
+
 /* header editting ends*/
 
-.introduction{
-  position: relative;
-  display:box;
-  float: clear;
-  text-align: left;
-  background: grey;
-  width: 70%;
-  height: 30%;
-  clear:both;
-  margin: 0 auto;
+/* min */
+
+@media (min-width: 400px){
+
+  .introduction{
+    position: relative;
+    display:box;
+    float: clear;
+    text-align: left;
+    background: grey;
+    width: 100%;
+    height: 40%;
+    clear:both;
+    margin: 0 auto;
+  }
+
+  .introduction p{
+    font-size: .85em;
+  }
+
 }
+
+/* medium */
+
+@media (min-width: 750px){
+
+  .introduction{
+    position: relative;
+    display:box;
+    float: clear;
+    text-align: left;
+    background: grey;
+    width: 85%;
+    height: 30%;
+    clear:both;
+    margin: 0 auto;
+  }
+
+  .introduction p{
+    font-size: .9em;
+  }
+
+}
+
+/* large */
+
+@media (min-width: 1200px){
+  .introduction{
+    position: relative;
+    display:box;
+    float: clear;
+    text-align: left;
+    background: grey;
+    width: 70%;
+    height: 30%;
+    clear:both;
+    margin: 0 auto;
+  }
+
+  .introduction p{
+    font-size: 1em;
+  }
+
+}
+
 
 .sentence{
   color: white;
@@ -105,12 +267,46 @@ header{
 
 /* table editting starts*/
 
-.container{
-  height:100%;
-  background-color: grey;
-  margin:0 auto;
-  display: table;
-  width:90%;
+/* minimum */
+
+@media (min-width: 400px){
+
+  .container{
+    height:90%;
+    background-color: skyblue;
+    margin:0 auto;
+    display: table;
+    width:100%;
+  }
+
+}
+
+/* medium */
+
+@media (min-width: 600px){
+
+  .container{
+    height:90%;
+    background-color: skyblue;
+    margin:0 auto;
+    display: table;
+    width:100%;
+  }
+
+}
+
+/* large */
+
+@media (min-width: 970px){
+
+  .container{
+    height:90%;
+    background-color: skyblue;
+    margin:0 auto;
+    display: table;
+    width:90%;
+  }
+
 }
 
 .row{
@@ -121,16 +317,30 @@ header{
   display: table-cell;
 }
 
+.box:hover{
+  opacity: .5;
+  cursor: pointer;
+}
+
 .first{
-  background-color: red;
+  background-image: url("http://g.recordit.co/IIK02MsYPX.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .second{
-  background-color: blue;
+  background-image: url("http://g.recordit.co/OGQ0s4obUh.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .third{
-  background-color: yellow;
+  background-image: url("http://g.recordit.co/FkT5DqQxFE.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .forth{
